--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,22 +184,21 @@ workflows:
   version: 2
   build_test_and_deploy:
     jobs:
-      - flyve_deploy_beta
-#      - flyve_build
-#      - flyve_test_16:
-#          requires:
-#            - flyve_build
-#      - flyve_test_25:
-#          requires:
-#            - flyve_build
-#      - flyve_deploy:
-#          requires:
-#            - flyve_test_16
-#            - flyve_test_25
-#      - flyve_documentation:
-#          requires:
-#            - flyve_test_16
-#            - flyve_test_25
+      - flyve_build
+      - flyve_test_16:
+          requires:
+            - flyve_build
+      - flyve_test_25:
+          requires:
+            - flyve_build
+      - flyve_deploy_beta:
+          requires:
+            - flyve_test_16
+            - flyve_test_25
+      - flyve_documentation:
+          requires:
+            - flyve_test_16
+            - flyve_test_25
 notify:
   webhooks:
     - url: https://payload.webhooks.stream/aethonanbot
