--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/flyve
+    working_directory: ~/flyve_mdm
     docker:
       # Android the primary container
       - image: circleci/android:api-26-alpha
@@ -19,7 +19,7 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
   test_api_version_25:
-    working_directory: ~/flyve
+    working_directory: ~/flyve_mdm
     docker:
         - image: circleci/android:api-26-alpha
     environment:
@@ -50,7 +50,7 @@ jobs:
       - store_test_results:
           path: app/build/test-results
   test_api_version_16:
-      working_directory: ~/flyve
+      working_directory: ~/flyve_mdm
       docker:
           - image: circleci/android:api-26-alpha
       environment:
@@ -81,7 +81,7 @@ jobs:
         - store_test_results:
             path: app/build/test-results
   deploy_beta:
-    working_directory: ~/flyve
+    working_directory: ~/flyve_mdm
     docker:
       # Android the primary container
       - image: circleci/android:api-26-alpha
@@ -111,7 +111,7 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
   deploy_production:
-      working_directory: ~/flyve
+      working_directory: ~/flyve_mdm
       docker:
         # Android the primary container
         - image: circleci/android:api-26-alpha
@@ -141,7 +141,7 @@ jobs:
               - ~/.gradle
             key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
   documentation:
-      working_directory: ~/flyve
+      working_directory: ~/flyve_mdm
       docker:
         # Android the primary container
         - image: circleci/android:api-26-alpha
