--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Branch created with the intention of functioning as an introduction web site of the project, a small point of entry where anyone can find out what it is about and to be able to get relevant information.",
   "sasslintConfig": ".sass-lint.yml",
   "scripts": {
-    "test": "sass-lint -c app/config/.sass-lint.yml 'css/**/*.scss, _sass/**/*.scss' -v -q & ./node_modules/.bin/eslint js/*.js & ci/yamllint.sh"
+    "test": "sass-lint -c app/config/.sass-lint.yml 'css/**/*.scss, _sass/**/*.scss' -v -q & ./node_modules/.bin/eslint js/*.js & ci/yamllint.sh & ci/htmlhint.sh"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "eslint": "^4.7.2",
     "eslint-config-google": "^0.9.1",
+    "htmlhint": "^0.9.13",
     "sass-lint": "^1.11.1",
     "yaml-lint": "^1.0.0"
   }
