--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
             exclude group: 'com.android.support', module: 'support-annotations'
         })
     testCompile 'junit:junit:4.12'
-    compile 'com.flyvemdm:inventory:1.0.2@aar'
+    compile 'org.flyve:inventory:0.0.1@aar'
+    compile 'ch.acra:acra:4.9.2'
 }
 
 import java.util.regex.Pattern
