--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,7 +129,7 @@ jobs:
             command: source ci/scripts/ci_updateversion.sh
         - run:
             name: Create apk
-            command: ./gradlew assemble
+            command: ./gradlew assembleRelease
         - run:
             name: Deploy to Google Play
             command: source ci/scripts/ci_fastlane.sh "playstore"
