--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
         })
     testCompile 'junit:junit:4.12'
     compile 'org.flyve:inventory:0.0.1@aar'
+    compile 'com.bugsnag:bugsnag-android:3.+'
 }
 
 import java.util.regex.Pattern
