--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,17 @@
 	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
+	<!-- Allows unlocking your device and activating its screen so UI tests can succeed -->
+	<uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+
+	<!-- Allows for storing and retrieving screenshots -->
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+	<!-- Allows changing locales -->
+	<uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
+
 	<application
 		android:label="@string/app_name"
 		android:name="org.flyve.inventory.agent.InventoryAgentApp"
