--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,6 +253,14 @@ workflows:
             branches:
               only:
                 - develop
+      - screenshot_api_16:
+          requires:
+            - test_api_version_16
+            - test_api_version_25
+          filters:
+            branches:
+              only:
+                - develop
       - deploy_production:
           filters:
             branches:
