--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,6 +133,9 @@ jobs:
           name: Update version and code
           command: source ci/scripts/ci_updateversion.sh
       - run:
+          name: Update about information
+          command: source ci/scripts/ci_about.sh
+      - run:
           name: Transifex
           command: source ci/scripts/ci_transifex.sh
       - run:
@@ -162,6 +165,9 @@ jobs:
         - run:
             name: Update version and code
             command: source ci/scripts/ci_updateversion.sh
+        - run:
+            name: Update about information
+            command: source ci/scripts/ci_about.sh
         - run:
             name: Create apk
             command: ./gradlew assembleRelease
