--- a/_config.yml
+++ b/_config.yml
@@ -47,10 +47,12 @@ prose:
       - name: "hackerNewsURL"
         field:
           element: "text"
+          label: Hacker News URL
           value: ""
       - name: "redditURL"
         field:
-          element: "text"
+          element: "text" 
+          label: Reddit URL
           value: ""
     
     _posts/static:
