--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -1,6 +1,6 @@
 #
-about.version=0.1.0
-about.build=190
+about.version=0.0.0
+about.build=1
 about.date=Tue Jul 11 21:58:40 2017
-about.commit=77d2ea0
-
+about.commit=c372bc8
+about.commitFull=c372bc8a81d7592737627c766d19078028bbf2c0
