--- a/app/src/main/assets/about.properties
+++ b/app/src/main/assets/about.properties
@@ -4,3 +4,4 @@ about.build=1
 about.date=Tue Jul 11 21:58:40 2017
 about.commit=c372bc8
 about.commitFull=c372bc8a81d7592737627c766d19078028bbf2c0
+about.github=https://github.com/flyve-mdm/flyve-mdm-android-inventory-agent
