--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,13 @@
 			android:theme="@style/NoActionBar"
 			>
 		</activity>
+		<activity
+			android:name="org.flyve.inventory.agent.InventoryActivity"
+			android:label="@string/app_name"
+			android:launchMode="standard"
+			android:theme="@style/NoActionBar"
+			>
+		</activity>
 		<service
 			android:enabled="true"
 			android:label="Inventory Agent"
