--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,6 +175,9 @@ jobs:
             name: Deploy to Google Play
             command: source ci/scripts/ci_fastlane.sh "playstore"
         - run:
+            name: Push changes to github
+            command: source ci/scripts/ci_push_changes.sh
+        - run:
             name: Create a github release
             command: source ci/scripts/ci_github_release.sh
         - run:
