--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,6 +160,9 @@ jobs:
         - restore_cache:
             key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
         - run:
+            name: Validate
+            command: source ci/scripts/ci_validate_workflow.sh
+        - run:
             name: Setup environment
             command: source ci/scripts/ci_setup.sh
         - run:
