--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-  test_api_version_25:
+  test_api_v25:
     working_directory: ~/flyve_mdm
     docker:
         - image: circleci/android:api-26-alpha
@@ -49,7 +49,7 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
-  test_api_version_16:
+  test_api_v16:
       working_directory: ~/flyve_mdm
       docker:
           - image: circleci/android:api-26-alpha
@@ -160,9 +160,6 @@ jobs:
         - restore_cache:
             key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
         - run:
-            name: Validate
-            command: source ci/scripts/ci_validate_workflow.sh
-        - run:
             name: Setup environment
             command: source ci/scripts/ci_setup.sh
         - run:
@@ -235,40 +232,43 @@ workflows:
   build_test_and_deploy:
     jobs:
       - build
-      - test_api_version_16:
+      - test_api_v16:
           requires:
             - build
-          filters:
-            branches:
-              only:
-                - develop
-      - test_api_version_25:
+      - test_api_v25:
           requires:
             - build
-          filters:
-            branches:
-              only:
-                - develop
       - deploy_beta:
           requires:
-            - test_api_version_16
-            - test_api_version_25
+            - test_api_v16
+            - test_api_v25
           filters:
             branches:
               only:
                 - develop
       - documentation:
           requires:
-            - test_api_version_16
-            - test_api_version_25
+            - test_api_v16
+            - test_api_v25
           filters:
             branches:
               only:
                 - develop
       - screenshot_api_16:
           requires:
-            - test_api_version_16
-            - test_api_version_25
+            - test_api_v16
+            - test_api_v25
+          filters:
+            branches:
+              only:
+                - develop
+      - deploy_production:
+          filters:
+            branches:
+              only:
+                - master
+            - test_api_v16
+            - test_api_v25
           filters:
             branches:
               only:
