--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,12 @@ jobs:
               name: Setup environment
               command: source ci/scripts/ci_setup.sh
           - run:
+              name: Update version and code
+              command: source ci/scripts/ci_updateversion.sh
+          - run:
+              name: Update about information
+              command: source ci/scripts/ci_about.sh
+          - run:
               name: Setup emulator
               command: sdkmanager "system-images;android-16;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-16;default;armeabi-v7a"
           - run:
