--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'org.flyve:inventory:0.2.0@aar'
     compile 'com.bugsnag:bugsnag-android:3.+'
+    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
 }
 
 import java.util.regex.Pattern
