--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,7 @@ jobs:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Accept licenses
-          command: |
-              yes | sdkmanager --install "extras;android;m2repository" || true
-              yes | sdkmanager --licenses || true
+          command: yes | sdkmanager --licenses || true
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
