--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,10 +54,8 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name="org.flyve.inventory.agent.MainActivity"
+			android:name="org.flyve.inventory.agent.FragmentAccueil"
 			android:label="@string/app_name"
-			android:launchMode="standard"
-			android:theme="@style/NoActionBar"
 			>
 		</activity>
 		<activity
