--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	package="org.flyve.inventory.agent"
-	android:versionName="2.1.3-beta"
-	android:versionCode="128">
+	android:versionName="0.0.2"
+	android:versionCode="923">
 
 	<!-- Permissions -->
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
