--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,9 @@ jobs:
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Validate workflow
+          command: source ci/scripts/ci_validate_workflow.sh
+      - run:
           name: Setup environment
           command: source ci/scripts/ci_setup.sh
       - run:
@@ -184,6 +187,9 @@ jobs:
         - checkout
         - restore_cache:
             key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+        - run:
+            name: Validate workflow
+            command: source ci/scripts/ci_validate_workflow.sh
         - run:
             name: Setup environment
             command: source ci/scripts/ci_setup.sh
