--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,7 +1,7 @@
 repository:
-  name: flyve-mdm-android-inventory-agent
+  name: android-inventory-agent
   description: Flyve MDM Inventory Agent
-  homepage: http://flyve.org/flyve-mdm-android-inventory-agent/
+  homepage: http://flyve.org/android-inventory-agent/
   topics: flyve-mdm, android, inventory-agent
   private: false
   has_issues: true
