docs: change repo slug

--- a/_data/whitelist_GP.yml
+++ b/_data/whitelist_GP.yml
@@ -4,7 +4,7 @@
 - flyve-mdm-android-admin-dashboard
 - glpi-plugin-armadito
 - flyve-mdm-android-inventory
-- flyve-mdm-android-inventory-agent
+- android-inventory-agent
 - flyve-mdm-ios-inventory-agent
 - flyve-mdm-glpi-demo
 - orion-glpi-plugin
