docs(jekyll): change repo slug

--- a/_data/whitelist_GP.yml
+++ b/_data/whitelist_GP.yml
@@ -3,7 +3,7 @@
 - flyve-mdm-glpi-plugin
 - flyve-mdm-android-admin-dashboard
 - glpi-plugin-armadito
-- flyve-mdm-android-inventory
+- android-inventory-agent
 - android-inventory-agent
 - flyve-mdm-ios-inventory-agent
 - flyve-mdm-glpi-demo
