build(eclipse): update buildship

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Android</name>
+	<name>android-inventory-agent</name>
 	<comment></comment>
 	<projects>
 	</projects>
