--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '26.0.2'
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "org.flyve.inventory.agent"
         minSdkVersion 16
-        targetSdkVersion 16
+        targetSdkVersion 27
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -37,20 +37,21 @@ android {
 }
 
 dependencies {
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-            exclude group: 'com.android.support', module: 'support-annotations'
-        })
-    androidTestCompile ('tools.fastlane:screengrab:1.1.0', {
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'org.flyve:inventory:0.5.0@aar'
-    compile 'com.bugsnag:bugsnag-android:3.+'
-    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
-    compile 'com.android.support:multidex:1.0.1'
+    androidTestImplementation('tools.fastlane:screengrab:1.1.0', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:27.0.1'
+    implementation 'com.android.support:appcompat-v7:27.0.1'
+    implementation 'com.android.support:design:27.0.1'
+    implementation 'org.flyve:inventory:0.5.0@aar'
+    implementation 'com.bugsnag:bugsnag-android:4.1.3'
+    implementation 'com.android.support:multidex:1.0.2'
 }
 
 import java.util.regex.Pattern
