--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.android.support:design:27.0.2'
     implementation 'org.flyve:inventory:0.6.1@aar'
     implementation 'com.bugsnag:bugsnag-android:4.1.3'
+    implementation 'com.orhanobut:logger:2.1.1'
     implementation 'com.android.support:multidex:1.0.2'
 }
 
