--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,9 +59,17 @@
 			>
 		</activity>
 		<activity
+			android:name="org.flyve.inventory.agent.InventoryParametersPreference"
+			android:label="@string/app_name">
+		</activity>
+		<activity
+			android:name="org.flyve.inventory.agent.GlobalParametersPreference"
+			android:label="@string/app_name">
+		</activity>
+
+		<activity
 			android:name="org.flyve.inventory.agent.FragmentAccueil"
-			android:label="@string/app_name"
-			>
+			android:label="@string/app_name">
 		</activity>
 		<activity
 			android:name="org.flyve.inventory.agent.AboutActivity"
