ci(circle): migrate to yarn
delete package-lock.json
add yarn.lock
change dependencies to dev

Signed-off-by: Naylin Medina <nmedina@teclib.com>

--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
   },
   "homepage": "http://flyve.org/android-inventory-agent/",
   "devDependencies": {
-    "standard-version": "^4.2.0"
-  },
-  "dependencies": {
     "conventional-github-releaser": "^3.0.0",
-    "node-github-release": "^0.1.1"
+    "gh-pages": "^1.2.0",
+    "node-github-release": "^0.1.1",
+    "standard-version": "^4.2.0"
   }
 }
