--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,6 @@ jobs:
           name: Accept licenses
           command: yes | sdkmanager --licenses || true
       - run:
-          name: Validate workflow
-          command: source ci/scripts/ci_validate_workflow.sh
-      - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
       - save_cache:
@@ -155,20 +152,8 @@ jobs:
           name: Setup environment
           command: source ci/scripts/ci_setup.sh
       - run:
-          name: Update version and code
-          command: source ci/scripts/ci_updateversion.sh
-      - run:
-          name: Update about information
-          command: source ci/scripts/ci_about.sh
-      - run:
-          name: Transifex
-          command: source ci/scripts/ci_transifex.sh
-      - run:
-          name: Create apk
-          command: ./gradlew assembleRelease
-      - run:
-          name: Deploy to Google Play
-          command: source ci/scripts/ci_fastlane.sh "beta"
+          name: Deploy Beta
+          command: source ci/scripts/ci_deploy_beta.sh
       - save_cache:
           paths:
             - ~/.gradle
@@ -188,26 +173,8 @@ jobs:
             name: Setup environment
             command: source ci/scripts/ci_setup.sh
         - run:
-            name: Update version and code
-            command: source ci/scripts/ci_updateversion.sh
-        - run:
-            name: Update about information
-            command: source ci/scripts/ci_about.sh
-        - run:
-            name: Commit changelog to gh-pages
-            command: source ci/scripts/ci_changelog.sh
-        - run:
-            name: Create apk
-            command: ./gradlew assembleRelease
-        - run:
-            name: Deploy to Google Play
-            command: source ci/scripts/ci_fastlane.sh "playstore"
-        - run:
-            name: Push changes to github
-            command: source ci/scripts/ci_push_changes.sh
-        - run:
-            name: Create a github release
-            command: source ci/scripts/ci_github_release.sh
+            name: Deploy Production
+            command: source ci/scripts/ci_deploy_production.sh
         - save_cache:
             paths:
               - ~/.gradle
@@ -242,11 +209,8 @@ jobs:
               sleep 30
               adb shell input keyevent 82
         - run:
-            name: Coverage
-            command: source ci/scripts/ci_coverage.sh
-        - run:
-            name: Javadoc
-            command: source ci/scripts/ci_javadoc.sh
+            name: Documentation
+            command: source ci/scripts/ci_documentation.sh
         - save_cache:
             paths:
               - ~/.gradle
@@ -262,8 +226,8 @@ workflows:
             - build
           filters:
             branches:
-              only:
-                - develop
+              ignore:
+                - master
       - deploy_beta:
           requires:
             - test_api_v16
