--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,100 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	package="org.flyve.inventory.agent"
-	android:versionName="0.5.0"
-	android:versionCode="1582">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="org.flyve.inventory.agent"
+    android:versionCode="1582"
+    android:versionName="0.5.0">
 
-	<!-- Permissions -->
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-	<uses-permission android:name='android.permission.ACCESS_COARSE_LOCATION' />
-	<uses-permission android:name='android.permission.ACCESS_FINE_LOCATION' />
-	<uses-permission android:name='android.permission.ACCESS_LOCATION_EXTRA_COMMANDS' />
-	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.BLUETOOTH" />
-	<uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
-	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-	<!-- Allows unlocking your device and activating its screen so UI tests can succeed -->
-	<uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
-	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- Allows unlocking your device and activating its screen so UI tests can succeed -->
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-	<!-- Allows for storing and retrieving screenshots -->
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- Allows for storing and retrieving screenshots -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-	<!-- Allows changing locales -->
-	<uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
+    <!-- Allows changing locales -->
+    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
 
-	<application
-		android:label="@string/app_name"
-		android:name="org.flyve.inventory.agent.ui.InventoryAgentApp"
-		android:vmSafeMode="true"
-		android:theme="@style/AppTheme"
-		android:icon="@mipmap/ic_launcher">
+    <application
+        android:name=".ui.InventoryAgentApp"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme"
+        android:vmSafeMode="true">
+        <meta-data
+            android:name="com.bugsnag.android.API_KEY"
+            android:value="b6bc7ce0da33f92fe6c49c568af43963" />
 
-		<meta-data
-			android:name="com.bugsnag.android.API_KEY"
-			android:value="b6bc7ce0da33f92fe6c49c568af43963"/>
+        <activity
+            android:name=".ui.ActivitySplash"
+            android:theme="@style/NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-		<activity android:name=".ui.ActivitySplash"
-			android:theme="@style/NoActionBar">
-			<intent-filter>
-				<action
-					android:name="android.intent.action.MAIN" />
-				<category
-					android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		<activity
-			android:name="org.flyve.inventory.agent.ui.ActivityMain"
-			android:label="@string/app_name"
-			>
-		</activity>
-		<activity
-			android:name="org.flyve.inventory.agent.preference.InventoryParametersPreference"
-			android:label="@string/app_name">
-		</activity>
-		<activity
-			android:name="org.flyve.inventory.agent.preference.GlobalParametersPreference"
-			android:label="@string/app_name">
-		</activity>
-		<activity
-			android:name="org.flyve.inventory.agent.ui.ActivityInventoryReport"
-			android:label="@string/app_name"
-			android:launchMode="standard"
-			android:theme="@style/NoActionBar"
-			>
-		</activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.ActivityMain"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:name=".preference.InventoryParametersPreference"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:name=".preference.GlobalParametersPreference"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:name=".ui.ActivityInventoryReport"
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:theme="@style/NoActionBar"></activity>
 
-		<service
-			android:enabled="true"
-			android:label="Inventory Agent"
-			android:description="@string/agent_description"
-			android:icon="@mipmap/ic_launcher"
-			android:name="org.flyve.inventory.agent.service.InventoryService"
-			tools:ignore="ExportedService">
-			<intent-filter>
-				<action android:name="org.flyve.inventory.service" />
-			</intent-filter>
-		</service>
-		<receiver android:name="org.flyve.inventory.agent.broadcast.BootStartAgent">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED" />
-			</intent-filter>
-		</receiver>
+        <service
+            android:name=".service.InventoryService"
+            android:description="@string/agent_description"
+            android:enabled="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="Inventory Agent"
+            tools:ignore="ExportedService">
+            <intent-filter>
+                <action android:name="org.flyve.inventory.service" />
+            </intent-filter>
+        </service>
 
-		<receiver android:name="org.flyve.inventory.agent.broadcast.TimeAlarm">
-			<intent-filter>
-				<action android:name="org.flyve.inventory.agent.ALARM"/>
-			</intent-filter>
-		</receiver>
-	</application>
+        <receiver android:name=".broadcast.BootStartAgent">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".broadcast.TimeAlarm">
+            <intent-filter>
+                <action android:name="org.flyve.inventory.agent.ALARM" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".ui.PermissionActivity"></activity>
+    </application>
+
 </manifest>
